# icfpc2022

./: .gitattributes  .gitignore  Makefile  download.sh  package-lock.json  result_by_api.json
ai/shohei2/: Cargo.toml  release.py
ai/shohei2/initial/: 21.isl  3.isl  9.isl
ai/shohei2/src/: data.rs  draw.rs  main.rs  solver.rs
ci/: api.go  batch.go  db.go  eval.go  go.mod  main.go
dashboard/: Pipfile  dashboard.py  requirements.txt
eval-v1/: main.go
eval-v2/: Canvas.ts  Color.ts  Interpreter.ts  README.md  index.ts  package-lock.json  package.json
hasi1/: a.cpp
hasi10/: 11.txt  13.txt  14.txt  18.txt  2.txt  20.txt  23.txt  7.txt  a.cpp
hasi11/: 10.txt  13.txt  15.txt  19.txt  25.txt  a.cpp
hasi12/: a.cpp
hasi13/: 16.txt  21.txt  22.txt  25.txt  6.txt  a.cpp
hasi14/: a.cpp
hasi15/: 1.txt  a.cpp  a0.cpp
hasi16/: 13.txt  19.txt  3.txt  4.txt  9.txt  a.cpp
hasi17/: 16.txt  20.txt  a.cpp  a.sh
hasi18/: 12.txt  15.txt  16.txt  18.txt  19.txt  22.txt  7.txt  9.txt  a.cpp
hasi19/: 31.txt  a.cpp
hasi2/: 4.txt  5.txt  a.cpp
hasi20/: 27.txt  34.txt  Makefile  a.cpp
hasi21/: 14.txt  25.txt  a.cpp  a.sh
hasi22/: a.cpp  a.sh
hasi23/: a.cpp  a.sh
hasi24/: 3.txt  3_0.txt  3_manual_botu.txt  a.cpp  a0.cpp  cut.txt
hasi25/: 4.txt  a.cpp
hasi26/: 5.txt  a.cpp
hasi27/: a.cpp
hasi28/: 12.txt  14.txt  a.cpp  a.sh
hasi29/: a.cpp
hasi3/: 13.txt  14.txt  5.txt  9.txt  a.cpp
hasi4/: 1.txt  a.cpp
hasi5/: a.cpp
hasi6/: a.cpp
hasi7/: 1.txt  10.txt  16.txt  17.txt  18.txt  2.txt  20.txt  4.txt  5.txt  6.txt  7.txt  8.txt  a.cpp
(+1972 files in other folders)
