[package]
name = "application_a"
version = "0.1.0"
authors = ["shohei909 <909mmsphere@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.7.3", features = ["small_rng"] }
image = "0.24.2"
chrono = "0.4.22"
imageproc = "0.23.0"